--- a/XmlStructLoader.jl/docs/Project.toml
+++ b/XmlStructLoader.jl/docs/Project.toml
@@ -1,3 +1,5 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-XmlStructLoader = "e7f1ddec-9409-402f-83d7-d3e0372eae59"
+
+[compat]
+Documenter = "1.4"
