add missing extension

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,25 +9,25 @@ on:
 
 jobs:
   call-documenter-AbstractXsdTypes:
-    uses: ./.github/workflows/subdirdocumenter
+    uses: ./.github/workflows/subdirdocumenter.yml
     with:
       subdir: AbstractXsdTypes.jl
     secrets:
       DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
   call-documenter-XmlStructLoader:
-    uses: ./.github/workflows/subdirdocumenter
+    uses: ./.github/workflows/subdirdocumenter.yml
     with:
       subdir: XmlStructLoader.jl
     secrets:
       DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
   call-documenter-XmlStructWriter:
-    uses: ./.github/workflows/subdirdocumenter
+    uses: ./.github/workflows/subdirdocumenter.yml
     with:
       subdir: XmlStructWriter.jl
     secrets:
       DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
   call-documenter-XsdToStruct:
-    uses: ./.github/workflows/subdirdocumenter
+    uses: ./.github/workflows/subdirdocumenter.yml
     with:
       subdir: XsdToStruct.jl
     secrets:
