--- a/AbstractXsdTypes.jl/Project.toml
+++ b/AbstractXsdTypes.jl/Project.toml
@@ -4,5 +4,5 @@ authors = ["Tom Lemmens", "Matthijs Cox"]
 version = "0.1.0"
 
 [deps]
-Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
+Format = "1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
