--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,7 +8,17 @@ on:
   pull_request:
   workflow_dispatch:
 
-jobs:   
+jobs:
+  call-documenter-XmlStructTools:
+    permissions:
+      contents: write
+      pull-requests: read
+      statuses: write
+    uses: ./.github/workflows/subdirdocumenter.yml
+    with:
+      subdir: .
+    secrets:
+      DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
   call-documenter-AbstractXsdTypes:
     permissions:
       contents: write
