--- a/AbstractXsdTypes.jl/Project.toml
+++ b/AbstractXsdTypes.jl/Project.toml
@@ -6,3 +6,6 @@ version = "0.1.0"
 [deps]
 Format = "1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
+
+[compat]
+Format = "1"
