--- a/XmlStructLoader.jl/Project.toml
+++ b/XmlStructLoader.jl/Project.toml
@@ -14,3 +14,6 @@ Parsers = "69de0a69-1ddd-5017-9359-2bf0b02dc9f0"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
+
+[compat]
+Parsers = "2"
