--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -29,12 +29,14 @@ jobs:
         arch:
           - x64
     steps:
+      # General Julia setup
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
+      # Test AbstractXsdTypes.jl
       - uses: julia-actions/julia-buildpkg@v1
         with:
           project: AbstractXsdTypes.jl
@@ -44,3 +46,15 @@ jobs:
       - uses: julia-actions/julia-processcoverage@v1
         with:
           directories: AbstractXsdTypes.jl/src
+      # Test XsdToStruct.jl
+      - name: Install local dependencies
+        run: julia --project=XsdToStruct.jl -e 'using Pkg; Pkg.add("../AbstractXsdTypes.jl");'
+      - uses: julia-actions/julia-buildpkg@v1
+        with:
+          project: XsdToStruct.jl
+      - uses: julia-actions/julia-runtest@v1
+        with:
+          project: XsdToStruct.jl
+      - uses: julia-actions/julia-processcoverage@v1
+        with:
+          directories: XsdToStruct.jl/src
