--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -15,8 +15,6 @@ permissions:
 
 jobs:
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
-    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
@@ -28,33 +26,8 @@ jobs:
         - windows-latest
         arch:
           - x64
-    steps:
-      # General Julia setup
-      - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
-        with:
+    uses: ./.github/workflows/TestWithInputs.yml
+    with:
           version: ${{ matrix.version }}
+          os: ${{ matrix.os }}
           arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v2
-      # Test AbstractXsdTypes.jl
-      - uses: julia-actions/julia-buildpkg@v1
-        with:
-          project: AbstractXsdTypes.jl
-      - uses: julia-actions/julia-runtest@v1
-        with:
-          project: AbstractXsdTypes.jl
-      - uses: julia-actions/julia-processcoverage@v1
-        with:
-          directories: AbstractXsdTypes.jl/src
-      # Test XsdToStruct.jl
-      - name: Install local dependencies
-        run: julia --project=XsdToStruct.jl -e 'using Pkg; Pkg.add(path=".", subdir="AbstractXsdTypes.jl");'
-      - uses: julia-actions/julia-buildpkg@v1
-        with:
-          project: XsdToStruct.jl
-      - uses: julia-actions/julia-runtest@v1
-        with:
-          project: XsdToStruct.jl
-      - uses: julia-actions/julia-processcoverage@v1
-        with:
-          directories: XsdToStruct.jl/src
