--- a/.github/workflows/TestXsdToStruct.yml
+++ b/.github/workflows/TestXsdToStruct.yml
@@ -25,7 +25,7 @@ jobs:
           arch: ${{ inputs.arch }}
       - uses: julia-actions/cache@v2
       - name: Install local AbstractXsdTypes
-        run: julia --project=XsdToStruct.jl -e 'using Pkg; Pkg.add(path=".", subdir="AbstractXsdTypes.jl");'
+        run: julia --project=XsdToStruct.jl -e 'using Pkg; Pkg.develop(path="AbstractXsdTypes.jl");'
       - uses: julia-actions/julia-buildpkg@v1
         with:
           project: XsdToStruct.jl
