this seems inefficient

--- a/.github/workflows/TestXmlStructLoader.yml
+++ b/.github/workflows/TestXmlStructLoader.yml
@@ -24,6 +24,8 @@ jobs:
           version: ${{ inputs.version }}
           arch: ${{ inputs.arch }}
       - uses: julia-actions/cache@v2
+      - name: Install local AbstractXsdTypes for XsdToStruct
+        run: julia --project=XsdToStruct.jl -e 'using Pkg; Pkg.develop(path="AbstractXsdTypes.jl");'
       - name: Install local AbstractXsdTypes
         run: julia --project=XmlStructLoader.jl -e 'using Pkg; Pkg.develop(path="AbstractXsdTypes.jl");'
       - name: Install local XsdToStruct
