Change handling of local dependencies

--- a/.github/workflows/TestXmlStructLoader.yml
+++ b/.github/workflows/TestXmlStructLoader.yml
@@ -24,12 +24,10 @@ jobs:
           version: ${{ inputs.version }}
           arch: ${{ inputs.arch }}
       - uses: julia-actions/cache@v2
-      - name: Install local AbstractXsdTypes for XsdToStruct
-        run: julia --project=XsdToStruct.jl -e 'using Pkg; Pkg.develop(path="AbstractXsdTypes.jl");'
       - name: Install local AbstractXsdTypes
-        run: julia --project=XmlStructLoader.jl -e 'using Pkg; Pkg.develop(path="AbstractXsdTypes.jl");'
+        run: julia --project=XmlStructLoader.jl -e 'using Pkg; Pkg.add(path=".", subdir="AbstractXsdTypes.jl");'
       - name: Install local XsdToStruct
-        run: julia --project=XmlStructLoader.jl/test -e 'using Pkg; Pkg.develop(path="XsdToStruct.jl");'
+        run: julia --project=XmlStructLoader.jl -e 'using Pkg; Pkg.add(path=".", subdir="XsdToStruct.jl");'
       - uses: julia-actions/julia-buildpkg@v1
         with:
           project: XmlStructLoader.jl
