--- a/XmlStructWriter.jl/Project.toml
+++ b/XmlStructWriter.jl/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 AbstractXsdTypes = "1d4aff4b-e088-40cb-b713-ffe4caf1580b"
+Format = "1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
