--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -1,8 +1,9 @@
 name: CompatHelper
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Everyday at midnight
+  # disabled for now
+  # schedule:
+  #   - cron: '0 0 * * *'  # Everyday at midnight
   workflow_dispatch:
 
 permissions:
