--- a/XsdToStruct.jl/Project.toml
+++ b/XsdToStruct.jl/Project.toml
@@ -9,3 +9,6 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+
+[compat]
+Julia = "1.6"
