--- a/XmlStructWriter.jl/Project.toml
+++ b/XmlStructWriter.jl/Project.toml
@@ -11,4 +11,5 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 
 [compat]
+AbstractXsdTypes = "0.1"
 julia = "1.6"
