--- a/XsdToStruct.jl/Project.toml
+++ b/XsdToStruct.jl/Project.toml
@@ -11,6 +11,7 @@ LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
 [compat]
+AbstractXsdTypes = "0.1"
 Downloads = "1"
 LightXML = "0.9"
 TOML = "1"
